fixtures/validation/ui-toolkit-graphics-package/invalid/display-name-too-long/Styles/MainMenu.uss
:root {
  unity-font-style: normal;
}
